--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
         </div>
        
         <div class="right-section">
-            <button class="login-btn">Login</button>
+            <a href="loginform.html" button class="login-btn">Login</button>
         </div>
     </div>
 
