--- a/Home.html
+++ b/Home.html
@@ -14,13 +14,14 @@
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact Us</a>
             <a href="product.html">Product</a>
+            <img src="logo.png" alt="logo" class="logo" >
         </div>
        
         <div class="right-section">
             <a href="loginform.html" button class="login-btn">Login</button>
         </div>
     </div>
-
+ 
    
 </body>
 </html>
