--- a/Home.html
+++ b/Home.html
@@ -6,21 +6,24 @@
     <title>Web Page with Navbar</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-        <nav>
-            <div class="left_links">
-                <a href="">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="product.html">Product</a>
-            </div>
+    <body>
 
-            <img src="logo.png" alt="logo" class="logo">
+        <div id="nje">
+            <nav>
+                <div class="left_links">
+                    <a href="">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="contact.html">Contact Us</a>
+                    <a href="product.html">Product</a>
+                </div>
 
-            <button class="login_btn"><a href="loginform.html">Log In</a></button>
-        </nav>
+                <img src="logo.png" alt="logo" class="logo">
+
+                <button class="login_btn"><a href="loginform.html">Log In</a></button>
+            </nav>
+            
+        </div>
  
    
-</body>
+    </body>
 </html>
