--- a/loginform.html
+++ b/loginform.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>LogIn</title>
-    <link rel="stylesheet" href="style.css">\
+    <link rel="stylesheet" href="style1.css">\
     <style>
         body{
             background-image: url("foto1..jpg");
