ndryshime ne contact us

--- a/Contact_us.html
+++ b/Contact_us.html
@@ -17,7 +17,28 @@
         <img src="logo.png" alt="logo" class="logo">
         <button class="login_btn"><a href="loginform.html">Log In</a></button>
     </nav>
-</div>
+    <div class="container1">
+        <form>
+        <label for="firstname">First Name</label>
+        <input type="text" id="firstname" name="firstname" placeholder="Your name...">
+
+        <label for="Lastname">Last Name</label>
+        <input type="text" id="lname" name="Lastname" placeholder="Your last name...">
+
+        <label for="country">Country</label>
+        <select id="country" name="country">
+            <option value="Gjakove">Gjakova</option>
+            <option value="Peje">Peje</option>
+            <option value="Ferizaj">Ferizaj</option>
+
+        </select>
+        <label for="message">Message</label>
+        <textarea id="subject" name="subject" placeholder="Write something..."></textarea>
+
+        <input type="submit" value="Submit">
+        </form>
+    </div>
+
 
     
 </body>
