--- a/Home.html
+++ b/Home.html
@@ -22,6 +22,8 @@
             </nav>
         </div>
 
+        <h1 class="text">Bestsellers</h1>
+
         <div class="row">
          <div class="column">
         
