--- a/Home.html
+++ b/Home.html
@@ -47,6 +47,10 @@
             <div class="column1">
             <img src="home5.avif" alt="5" style="width: 100%;">
             </div>
+
+            <div class="column1">
+            <img src="quote.jpg"  alt="6" style="width: 100%;">
+            </div>
         </div>
         
     
