--- a/loginform.html
+++ b/loginform.html
@@ -6,7 +6,13 @@
     <title>LogIn</title>
     <link rel="stylesheet" href="style1.css">
     
-   
+    <style>
+        body{
+            background-image:url("foto1..jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
