ndryshime ne produkt aksesore

--- a/About_us.html
+++ b/About_us.html
@@ -13,6 +13,7 @@
             <a href="About_us.html">About Us</a>
             <a href="Contact_us.html">Contact Us</a>
             <a href="Product_us.html">Product</a>
+            <a href="Product_Accessories.html">Product Accessories</a>
         </div>
         <img src="logo.png" alt="logo" class="logo">
         <button class="login_btn"><a href="loginform.html">Log In</a></button>
