--- a/Product_us.html
+++ b/Product_us.html
@@ -26,7 +26,7 @@
         <div class="columnflex">
             <img src="produkti 1.jpg" alt="1" style="width: 100%;">
             <p>The Impossible Glow Bronze                    
-                Hyaluronic Acid & Sea Kelp Glow Drop<br>$30<br></p>    
+                Hyaluronic Acid & Sea Kelp Glow Drop<br>£30<br></p>    
         </div>
 
         <div class="columnflex">
