--- a/htmlphp/About_us.html
+++ b/htmlphp/About_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav>
@@ -14,14 +14,15 @@
             <a href="Contact_us.html">Contact Us</a>
             <a href="Product_us.html">Product</a>
             <a href="Product_Accessories.html">Product Accessories</a>
+            <a href="Dashboard.html">Dashboard</a>
         </div>
-        <img src="logo.png" alt="logo" class="logo">
+        <img src="../img/logo.png" alt="logo" class="logo">
         <button class="login_btn"><a href="loginform.html">Log In</a></button>
     </nav>
 </div>
 
 <div class="foto_about_us">
-    <img src="about f1.jpg" width="100%">
+    <img src="../img/about f1.jpg" width="100%">
 </div>
 
     <div style="display: flex; justify-content: space-around; margin-top: 100px;">
@@ -54,15 +55,15 @@
 
    <div class="fotot2">
        <div class="fotot_2">
-           <img src="about3.jpg" style="width: 100%;">
+           <img src="../img/about3.jpg" style="width: 100%;">
        </div>
 
        <div class="fotot_2">
-            <img src="about4.jpg" style="width: 100%;">
+            <img src="../img/about4.jpg" style="width: 100%;">
        </div>
 
        <div class="fotot_2">
-            <img src="about5.jpg" style="width: 100%;">
+            <img src="../img/about5.jpg" style="width: 100%;">
        </div>
    </div>
    <br>
