--- a/htmlphp/Contact_us.html
+++ b/htmlphp/Contact_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
          body{
             background-image: url("foto1..jpg");
@@ -21,8 +21,9 @@
             <a href="Contact_us.html">Contact Us</a>
             <a href="Product_us.html">Product</a>
             <a href="Product_Accessories.html">Product Accessories</a>
+            <a href="Dashboard.html">Dashboard</a>
         </div>
-        <img src="logo.png" alt="logo" class="logo">
+        <img src="../img/logo.png" alt="logo" class="logo">
         <button class="login_btn"><a href="loginform.html">Log In</a></button>
     </nav>
     <div class="container1">
