do ndryshime te vogla

--- a/htmlphp/Sign up.html
+++ b/htmlphp/Sign up.html
@@ -17,7 +17,7 @@
     
     <div class="container">
         <div class="form-box">
-        <form id="passwordform">
+        <form id="passwordform" action="../PHP/signup.php" method="post">
            <br>
             <input type="email" id="email" name="email" placeholder=" Email" required>
            
