--- a/htmlphp/Contact_us.html
+++ b/htmlphp/Contact_us.html
@@ -21,7 +21,7 @@
             <a href="Contact_us.html">Contact Us</a>
             <a href="Product_us.html">Product</a>
             <a href="Product_Accessories.html">Product Accessories</a>
-            <a href="Dashboard.html">Dashboard</a>
+            <a href="Dashboard.php">Dashboard</a>
         </div>
         <img src="../img/logo.png" alt="logo" class="logo">
         <button class="login_btn"><a href="loginform.html">Log In</a></button>
