--- a/htmlphp/loginform.html
+++ b/htmlphp/loginform.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <div class="form-box">
-            <form id="loginForm"x>
+            <form id="loginForm" action="../PHP/login.php" method="post">
                 <p id="vendos"></p> 
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email">
