--- a/htmlphp/Sign up.html
+++ b/htmlphp/Sign up.html
@@ -19,13 +19,16 @@
         <div class="form-box">
         <form id="passwordform" action="../PHP/signup.php" method="post">
                 <br>
-                <input type="text" id="name" name="name" placeholder="Full Name"required>
+                <input type="text" id="name" name="name" placeholder="Full_Name"required>
                 <input type="email" id="email" name="email" placeholder=" Email" required>
                 <br>
                 <input type="text" id="username" name="username" placeholder="Username"required>
                 <input type="password" id="password" name="password" placeholder="Create Password"required>
                 <br>
                 <input type="password" id="password1" placeholder="Confirm Password"required>
+                <br>
+                <input type="text" id="Role" name="Role" placeholder="Role"required>
+                <br>
                 
                 <button type="submit" name="submit">Sign up</button>
                 <p id="vendos"></p>
